; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_btm_sec_connect_after_reject_timeout.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_btm_sec_connect_after_reject_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_7__, %struct.TYPE_8__*, %struct.TYPE_6__ }
%struct.TYPE_7__ = type { i32 (i32, i32, i32, i32)* }
%struct.TYPE_8__ = type { i32, i32, i32 }
%struct.TYPE_6__ = type { i64 }

@btm_cb = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@.str = private unnamed_addr constant [40 x i8] c"btm_sec_connect_after_reject_timeout()\0A\00", align 1
@BTM_CMD_STARTED = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [84 x i8] c"Security Manager: btm_sec_connect_after_reject_timeout: failed to start connection\0A\00", align 1
@BTM_PAIR_STATE_IDLE = common dso_local global i32 0, align 4
@HCI_ERR_MEMORY_FULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @btm_sec_connect_after_reject_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btm_sec_connect_after_reject_timeout(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 1), align 8
  store %struct.TYPE_8__* %4, %struct.TYPE_8__** %3, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @UNUSED(i32* %5)
  %7 = call i32 @BTM_TRACE_EVENT(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 2, i32 0), align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 1), align 8
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %9 = call i64 @btm_sec_dd_create_conn(%struct.TYPE_8__* %8)
  %10 = load i64, i64* @BTM_CMD_STARTED, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %1
  %13 = call i32 @BTM_TRACE_WARNING(i8* getelementptr inbounds ([84 x i8], [84 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i32, i32* @BTM_PAIR_STATE_IDLE, align 4
  %15 = call i32 @btm_sec_change_pairing_state(i32 %14)
  %16 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %17 = icmp ne i32 (i32, i32, i32, i32)* %16, null
  br i1 %17, label %18, label %31

18:                                               ; preds = %12
  %19 = load i32 (i32, i32, i32, i32)*, i32 (i32, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @HCI_ERR_MEMORY_FULL, align 4
  %30 = call i32 %19(i32 %22, i32 %25, i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %18, %12
  br label %32

32:                                               ; preds = %31, %1
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @BTM_TRACE_EVENT(i8*) #1

declare dso_local i64 @btm_sec_dd_create_conn(%struct.TYPE_8__*) #1

declare dso_local i32 @BTM_TRACE_WARNING(i8*) #1

declare dso_local i32 @btm_sec_change_pairing_state(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
